# plane_pages_mcp

./: .env.example  Dockerfile  README.md  plane_plages_mcp_workpackage.md  pyproject.toml
.claude/: settings.json
src/plane_pages_mcp/: __init__.py  __main__.py  auth.py  config.py  containers.py  convert.py  db.py  live.py  pipeline.py  relations.py  rest.py  server.py  verify.py  workitems.py
tests/: test_auth.py  test_auth_middleware.py  test_config.py  test_containers.py  test_convert.py  test_db_helpers.py  test_relations.py  test_rest_helpers.py  test_verify_resilience.py  test_workitems.py  test_workspace_resolution.py
